@@ -12,6 +12,7 @@
 - Implemented duplicate game object (deep copy), terrain can not be duplicated
 - Implemented delete game object undo/redo command
 - Fixed parenting in outline. Now local position is correctly calculated
+- Implemented Scale Tool (with undo/redo)
 
 [0.0.8] ~ 23/06/2016
 - Updated libGDX to 1.9.3
